--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <section class="container">
     <section class="col1"><label for="name">Adaptor sequence (5'-3')</label> <textarea class="champ" type="textarea" id="name" name="name" style="top" required onkeyup='this.value=this.value.toUpperCase()' onmousemove='this.value=this.value.toUpperCase()' placeholder="Adaptor" pattern="[[A,T,G,C,\s]{1,}" ></textarea> </section>
-    <section class="col2"><label for="name1">RNA sequence (5'-3')-without Psy site</label> <textarea class="champ" type="textarea" id="name1" name="name1" style="top" required 
+    <section class="col2"><label for="name1">RNA sequence (5'-3')-without Psi site</label> <textarea class="champ" type="textarea" id="name1" name="name1" style="top" required 
      onmousemove='this.value=this.value.toUpperCase()' onkeyup='this.value=this.value.toUpperCase()' placeholder="RNA" pattern="[A,T,G,C,\s]{1,}" ></textarea></section>
 </section>
 
