--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <button type="button" class="exportcsv">Export (.csv)</button>   
 </section>
 
-<section align="center">
+<section class="container2">
 <br>
 
 <br>
