--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <br>
 Optimized for Google Chrome <br>
 
-Please cite: <a target="_blank">Bogard<sup>*</sup>,Tellier<sup>*</sup> et al.,2022 </a><br>
+Please cite: <a href="https://www.mdpi.com/2311-553X/8/5/63/htm" target="_blank">Bogard<sup>*</sup>,Tellier<sup>*</sup> et al.,2022 </a><br>
 <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6800517/" target="_blank">Zhang,W., et al.,2019</a>  
 <br>
 <br>
